# busybox

./: PAAS组件端口.txt  README.md  centos下载离线软件包.txt  sublime常用.txt  虚拟机挂载新磁盘.txt
BOOK/: 面向程序员的数据挖掘指南.txt
algrithm/: 聊天机器人对话匹配.txt
bootstraplearn/basic/: TOOLBAR.html  page1.html  tooltip.html  分页.html  列表.html  可关闭的警告.html  对话框.html  导航TAB页.html  徽章badge.html  折叠collapse.html  文章固定位置的导航菜单.html  标签.html  缩略图.html  轮播.html  进度条.html  面板.html
c++/url2msgid-cpp/: CMakeLists.txt  CharIdMap.cpp  CharIdMap.h  MyBigNumber.cpp  MyBigNumber.h  Url2Msgid.cpp  Url2Msgid.h  bignumber.cpp  bignumber.h  common.h  main.cpp
docker/: docker.txt
elasticsearch/: query.txt  优化.txt
linux/: crontab.txt  install ftp.txt  ios-as-yum-source.txt  iperf网络测速.txt  java性能参数观察方法.docx  ~$va性能参数观察方法.docx  性能观察.txt  网络速度观察.txt
linux/psguard/: guard.py  kafka.ini  zookeeper.ini
network/: hosts.txt
paas-kafka/: Kafka命令.txt  Topic级别配置属性表.rtf  启动-停止.txt  安装步骤.txt
paas-usage/: pom.xml
paas-usage/src/main/java/paas/api/: Kafka.java
paas-zookeeper/: zookeeper命令行工具使用方法.txt  安装步骤.txt
python/basic/: basic.py  file1.csv  file2.csv  join.py  string.py
python/basic/sequence-compare/: simhash.py  wordcount.py
python/usecase/javatestcase/: 1.txt  CPUMeasure.java  MyTest.java  javash.sh  javatestcase.py
python/usecase/skill_test/: README.md  skill_test.py
python/usecase/skill_test/input_otherscore/: java.csv  主观题分数.csv
python/usecase/skill_test/input_userinfo/: 名单.csv
python/usecase/skill_test/output_specScore/: dba得分.csv  java得分.csv  ued得分.csv  得分.csv
sql/: psql-procedure.txt
(+4 files in other folders)
